--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -11,7 +11,7 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    width: 20%;
+    width: 25%;
     height: auto;
    
     transition:0.5s;
@@ -20,7 +20,7 @@
         flex-direction: column; 
         background-color: #fff;
         border-radius: 2%;
-        padding: 5% 10%;
+        padding: 5% 15%;
         
     }.close{
         position: absolute;
@@ -37,10 +37,47 @@
         text-align: center;
         font-family: 'Lobster', sans-serif;
         font-size: 25px;
+       
     }input{
         padding: 5% 0;
         margin: 5% 0;
-    }button {
+    }.check{
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        width: 100%;
+    }input[type="checkbox"]{
+        appearance: none;
+        -webkit-appearance: none;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width: 20px;
+        height: 20px;
+        background-color: #fff;
+        border: 1px solid black;
+        transition: all 0.5s;
+        cursor: pointer;
+        &::after {
+           content: '\f00c';
+           font-weight: 900;
+           font-family: 'Font Awesome 5 Free'; 
+           font-size: 15px;
+           display: none;
+        }&:hover {
+            background-color: rgb(231, 231, 231);
+        }&:checked {
+            background-color: #fff;
+            &::after {
+               display: block; 
+            }
+        }
+    }label {
+        font-size: 15px;
+        text-align: center;
+    }
+    
+    button {
         margin: 5% 0;
         padding: 5% 0;
         background-color: black;
